// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`terminal-orders-list-core displays an error state on failed data fetch 1`] = `
<terminal-orders-list-core>
  <div>
    <div class="table-wrapper">
      <table class="table table-hover" part="table text color font-family background-color">
        <thead class="sticky-top table-head">
          <tr class="table-light text-nowrap">
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The date and time the order was created">
              Created At
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The date and time the order was last updated">
              Updated At
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The current status of the order">
              Order Status
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The number of terminals associated with the order">
              Order Quantity
            </th>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr>
            <td class="error-state" colspan="4" data-test-id="table-error-state" part="table-error text color font-family background-color" style="text-align: center;">
              An unexpected error occurred: Fetch error
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="4" part="table-cell text color font-family background-color">
              <pagination-menu>
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination">
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="button-disabled button text color font-family">
                        <span class="me-1">
                          «
                        </span>
                        <span>
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="button-disabled button text color font-family">
                        <span>
                          Next
                        </span>
                        <span class="ms-1">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</terminal-orders-list-core>
`;

exports[`terminal-orders-list-core renders properly with fetched data 1`] = `
<terminal-orders-list-core>
  <div>
    <div class="table-wrapper">
      <table class="table table-hover" part="table text color font-family background-color">
        <thead class="sticky-top table-head">
          <tr class="table-light text-nowrap">
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The date and time the order was created">
              Created At
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The date and time the order was last updated">
              Updated At
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The current status of the order">
              Order Status
            </th>
            <th part="table-head-cell table-cell text color font-family background-color text color font-family background-color" scope="col" title="The number of terminals associated with the order">
              Order Quantity
            </th>
          </tr>
        </thead>
        <tbody class="table-body">
          <tr data-row-entity-id="tord_ABCD1234" data-test-id="table-row">
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Jan 2, 2025
              </div>
              <div class="fw-bold">
                10:30am
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Jan 2, 2025
              </div>
              <div class="fw-bold">
                10:45am
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-primary" part="badge font-family badge-primary" title="This order is submitted">
                Submitted
              </span>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              1
            </td>
          </tr>
          <tr data-row-entity-id="tord_WXYZ5678" data-test-id="table-row">
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Feb 10, 2025
              </div>
              <div class="fw-bold">
                9:20am
              </div>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Feb 10, 2025
              </div>
              <div class="fw-bold">
                9:25am
              </div>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-success" part="badge font-family badge-success" title="This order has been completed">
                Completed
              </span>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              4
            </td>
          </tr>
          <tr data-row-entity-id="tord_DEF55468789" data-test-id="table-row">
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Mar 11, 2025
              </div>
              <div class="fw-bold">
                5:00pm
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Mar 11, 2025
              </div>
              <div class="fw-bold">
                5:05pm
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-secondary" part="badge font-family badge-secondary" title="This order is created">
                Created
              </span>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              2
            </td>
          </tr>
          <tr data-row-entity-id="tord_GHI22168225" data-test-id="table-row">
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Apr 5, 2025
              </div>
              <div class="fw-bold">
                11:50am
              </div>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Apr 5, 2025
              </div>
              <div class="fw-bold">
                12:10pm
              </div>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-success" part="badge font-family badge-success" title="This order has been completed">
                Completed
              </span>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              4
            </td>
          </tr>
          <tr data-row-entity-id="tord_JKL12345678" data-test-id="table-row">
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                May 15, 2025
              </div>
              <div class="fw-bold">
                2:00pm
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                May 15, 2025
              </div>
              <div class="fw-bold">
                2:20pm
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-danger" part="badge font-family badge-danger" title="This order is canceled">
                Canceled
              </span>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              2
            </td>
          </tr>
          <tr data-row-entity-id="tord_PQR12345678" data-test-id="table-row">
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Jun 1, 2025
              </div>
              <div class="fw-bold">
                8:00am
              </div>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Jun 1, 2025
              </div>
              <div class="fw-bold">
                8:15am
              </div>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-info" part="badge font-family badge-info" title="This order is in progress">
                In Progress
              </span>
            </td>
            <td part="table-cell-even table-cell text color font-family background-color text color font-family background-color">
              1
            </td>
          </tr>
          <tr data-row-entity-id="tord_MNO98765432" data-test-id="table-row">
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Jun 20, 2025
              </div>
              <div class="fw-bold">
                8:30am
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <div class="fw-bold">
                Jun 20, 2025
              </div>
              <div class="fw-bold">
                8:45am
              </div>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              <span class="badge bg-warning" part="badge font-family badge-warning" title="This order is on hold">
                On Hold
              </span>
            </td>
            <td part="table-cell-odd table-cell text color font-family background-color text color font-family background-color">
              2
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="4" part="table-cell text color font-family background-color">
              <pagination-menu>
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination">
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="button-disabled button text color font-family">
                        <span class="me-1">
                          «
                        </span>
                        <span>
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="button-disabled button text color font-family">
                        <span>
                          Next
                        </span>
                        <span class="ms-1">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</terminal-orders-list-core>
`;
